force-app/main/default/objects/animalos__Animal_Action__c/animalos__Animal_Action__c.object-meta.xml
<CustomObject>
    <label>Animal Action</label>
    <nameField>
        <displayFormat>AA{00000}</displayFormat>
        <label>Animal Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>