force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Action_Item__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item</label>
    <referenceTo>animalos__Action_Item__c</referenceTo>
    <relationshipLabel>Animal Actions</relationshipLabel>
    <relationshipName>Animal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>