force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Action_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Status__c</fullName>
    <label>Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Given - See Comments</fullName>
            </value>
            <value>
                <fullName>Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>