force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Action_Timing__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Timing__c</fullName>
    <formula>IF(TEXT(animalos__Time_Of_Day__c) = NULL, TEXT(animalos__Date_Time_of_Action__c + 0.45833), TEXT(animalos__Time_Of_Day__c ) &amp; &apos; &apos; &amp; TEXT(animalos__Date_Time_of_Action__c + 0.45833))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Timing</label>
    <type>Text</type>
</CustomField>