force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Date_Time_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Time_Action_Completed__c</fullName>
    <label>Date/Time Action Completed</label>
    <type>DateTime</type>
</CustomField>