force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Date_Time_of_Action__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Time_of_Action__c</fullName>
    <label>Date/Time of Action</label>
    <type>DateTime</type>
</CustomField>