force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>