force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Overdue__c.field-meta.xml
<CustomField>
    <fullName>animalos__Overdue__c</fullName>
    <formula>IF( AND(ISPICKVAL( animalos__Action_Status__c , &apos;Scheduled&apos;),  DATEVALUE( animalos__Date_Time_of_Action__c ) &lt; TODAY() ) , IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__Note_Flags/Warning.png&quot;, &apos;Warning&apos;, 25, 25), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Text</type>
</CustomField>