force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>animalos__Time_Of_Day__c</fullName>
    <label>Time Of Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>