force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Treatment_Category__c.field-meta.xml
<CustomField>
    <fullName>animalos__Treatment_Category__c</fullName>
    <label>Treatment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Treatment_Category</valueSetName>
    </valueSet>
</CustomField>