force-app/main/default/objects/animalos__Animal_Action__c/fields/animalos__Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>animalos__Weight_KG__c</fullName>
    <label>Weight (KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>