force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Additional_behaviours_flags_C__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_behaviours_flags_C__c</fullName>
    <inlineHelpText>For Canines</inlineHelpText>
    <label>Additional behaviours (flags) C</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoids handling</fullName>
            </value>
            <value>
                <fullName>Escape risk/has escaped</fullName>
            </value>
            <value>
                <fullName>Confrontational/hostile</fullName>
            </value>
            <value>
                <fullName>Repetitive behaviours</fullName>
            </value>
            <value>
                <fullName>Two people required</fullName>
            </value>
            <value>
                <fullName>Supervisor Only</fullName>
            </value>
            <value>
                <fullName>Only toilets outside the kennel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>