force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Additional_Behaviours_flags_F__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_Behaviours_flags_F__c</fullName>
    <inlineHelpText>For Felines</inlineHelpText>
    <label>Additional Behaviours (flags) F</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal grooming</fullName>
            </value>
            <value>
                <fullName>Attempts to escape enclosure</fullName>
            </value>
            <value>
                <fullName>Cage destruction</fullName>
            </value>
            <value>
                <fullName>Excessive vocalisation</fullName>
            </value>
            <value>
                <fullName>Hanging on the cage door</fullName>
            </value>
            <value>
                <fullName>Pacing</fullName>
            </value>
            <value>
                <fullName>Pawing at cage/scratching at door</fullName>
            </value>
            <value>
                <fullName>Toileting outside litter tray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>