force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stiches Out</fullName>
            </value>
            <value>
                <fullName>Vet Appointment</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>