force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_BAR__c.field-meta.xml
<CustomField>
    <fullName>aos_BAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAR</label>
    <type>Checkbox</type>
</CustomField>