force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Body_Length_mm__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Length_mm__c</fullName>
    <label>Body Length (mm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>