force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Collect_Faecal__c.field-meta.xml
<CustomField>
    <fullName>aos_Collect_Faecal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Faecal</label>
    <type>Checkbox</type>
</CustomField>