force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Congestion__c.field-meta.xml
<CustomField>
    <fullName>aos_Congestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congestion</label>
    <type>Checkbox</type>
</CustomField>