force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Coughing__c.field-meta.xml
<CustomField>
    <fullName>aos_Coughing__c</fullName>
    <label>Coughing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>