force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Date_of_Action__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_of_Action__c</fullName>
    <formula>DATEVALUE( animalos__Date_Time_of_Action__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Action</label>
    <type>Date</type>
</CustomField>