force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Date_of_Action_Completion__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_of_Action_Completion__c</fullName>
    <formula>DATEVALUE( animalos__Date_Time_Action_Completed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Action Completion</label>
    <type>Date</type>
</CustomField>