force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Demeanour_Observations__c.field-meta.xml
<CustomField>
    <fullName>aos_Demeanour_Observations__c</fullName>
    <label>Demeanour/Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>