force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Dose__c.field-meta.xml
<CustomField>
    <fullName>aos_Dose__c</fullName>
    <label>Dose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>