force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Enrichment_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Enrichment_Type__c</fullName>
    <label>Enrichment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(F) Puzzle feeder</fullName>
            </value>
            <value>
                <fullName>(F) Slow feeder</fullName>
            </value>
            <value>
                <fullName>(F) Stuffed Kong</fullName>
            </value>
            <value>
                <fullName>(F) Licki mats</fullName>
            </value>
            <value>
                <fullName>(F) Towels or boxes with food</fullName>
            </value>
            <value>
                <fullName>(F) Food scattered/smeared in kennel</fullName>
            </value>
            <value>
                <fullName>(F) Long lasting chew</fullName>
            </value>
            <value>
                <fullName>(Sc) ‘walk’ in a box</fullName>
            </value>
            <value>
                <fullName>(Sc) Cloth with familiar scent</fullName>
            </value>
            <value>
                <fullName>(Sc) “new” Scent cloths</fullName>
            </value>
            <value>
                <fullName>(Sc) Snuffle mats</fullName>
            </value>
            <value>
                <fullName>(A) Through a dog’s ear.</fullName>
            </value>
            <value>
                <fullName>(A) Audiobooks</fullName>
            </value>
            <value>
                <fullName>(A) ‘Sounds sociable’</fullName>
            </value>
            <value>
                <fullName>(C) Free work session with 1-3 novel objects</fullName>
            </value>
            <value>
                <fullName>(C) Searching for a toy or food</fullName>
            </value>
            <value>
                <fullName>(C) Office time</fullName>
            </value>
            <value>
                <fullName>(C) Training session</fullName>
            </value>
            <value>
                <fullName>(C) Time in kennel with dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>