force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_External_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_External_ID__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>