force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Faecal_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Faecal_Score__c</fullName>
    <formula>CASE(aos_Feacal_Scoring__c, &apos;1&apos;, 1, &apos;2&apos;, 2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faecal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>