force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Faeces__c.field-meta.xml
<CustomField>
    <fullName>aos_Faeces__c</fullName>
    <label>Faeces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>