force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Faeces_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Faeces_Score__c</fullName>
    <formula>CASE(aos_Faeces__c,&apos;Yes&apos;,1,&apos;No&apos;,2,&apos;Abnormal&apos;,3,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faeces Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>