force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Faeces_Urates_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Faeces_Urates_Comments__c</fullName>
    <label>Faeces/Urates Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>