force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Fluid_Route__c.field-meta.xml
<CustomField>
    <fullName>aos_Fluid_Route__c</fullName>
    <label>Fluid Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>