force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Food_Eaten__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Eaten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Eaten</label>
    <type>Checkbox</type>
</CustomField>