force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Food_Offered__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Offered</label>
    <type>Checkbox</type>
</CustomField>