force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Gaping_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Gaping_Comments__c</fullName>
    <label>Gaping Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>