force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Humidity__c.field-meta.xml
<CustomField>
    <fullName>aos_Humidity__c</fullName>
    <label>Humidity</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>