force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Medicine__c.field-meta.xml
<CustomField>
    <fullName>aos_Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Animal Actions</relationshipLabel>
    <relationshipName>Animal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>