force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Medicine_Intake__c.field-meta.xml
<CustomField>
    <fullName>aos_Medicine_Intake__c</fullName>
    <label>Medicine Intake</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>