force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Misting__c.field-meta.xml
<CustomField>
    <fullName>aos_Misting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Misting</label>
    <type>Checkbox</type>
</CustomField>